--- a/JumpMaze/res/layout/activity_maze.xml
+++ b/JumpMaze/res/layout/activity_maze.xml
@@ -38,7 +38,7 @@
                 android:textSize="24sp" />
 
             <ImageButton
-                android:id="@+id/imageButton1"
+                android:id="@+id/sound_button"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight=".3"
@@ -52,7 +52,7 @@
         android:layout_height="0dip"
         android:layout_weight="0.64"
         android:stretchColumns="*"
-        android:weightSum="5" >
+        android:weightSum="100" >
 
         <TableRow
             android:id="@+id/MazeRow1"
@@ -62,28 +62,23 @@
 
             <Button
                 android:id="@+id/Button1"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button2"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button3"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button4"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button5"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
         </TableRow>
 
         <TableRow
@@ -94,28 +89,23 @@
 
             <Button
                 android:id="@+id/Button6"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button7"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button8"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button9"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button10"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
         </TableRow>
 
         <TableRow
@@ -126,28 +116,23 @@
 
             <Button
                 android:id="@+id/Button11"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button12"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button13"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button14"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button15"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
         </TableRow>
 
         <TableRow
@@ -158,28 +143,23 @@
 
             <Button
                 android:id="@+id/Button16"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button17"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button18"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button19"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button20"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
         </TableRow>
 
         <TableRow
@@ -190,28 +170,23 @@
 
             <Button
                 android:id="@+id/Button21"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button22"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button23"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button24"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
 
             <Button
                 android:id="@+id/Button25"
-                android:layout_width="60sp"
-                android:layout_height="80sp" />
+                 />
         </TableRow>
     </TableLayout>
 
