--- a/JumpMaze/res/values/dimens.xml
+++ b/JumpMaze/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_size">35sp</dimen>
+    <dimen name="nothing">0dp</dimen>
 
 </resources>
